<resources>
    <string name="app_name">360World</string>
    <string-array name="list_options">
        <item>Explore</item>
        <item>Notifications</item>
        <item>Camera</item>
        <item>Friends</item>
        <item>Upload</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <!-- Log in and create account -->
    <string name="log_in">Log in</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="create_account_congratulations">Congratulations!</string>
    <string name="create_account_proceed_to_map">Proceed to map</string>
    <string name="create_account_successfully_created">Your account has been successfully created!</string>
    <string name="create_account_thanks_for_registering">Thanks for registering, </string>
    <string name="create_account_info">You can now share 360-panorama pictures with your friends anywhere,
        at anytime. You are already logged in, and to start exploring the world, just press the button below.</string>
    <string name="create_account_wish_and_goodluck">We wish you the best and good luck!</string>
    <string name="create_account_360WorldTeam">Yours, 360World Team.</string>
    <string name="account_details">Account details</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="retype_password">Re-type password</string>
    <string name="min_5_chars">Minimum of five characters</string>
    <!-- Create account messages -->
    <string name="password_match">Passwords must match.</string>
    <string name="username_short">Username cannot be shorter than 5 characters.</string>
    <string name="username_long">Username cannot be longer than 30 characters.</string>
    <string name="username_taken">Username is already taken.</string>
    <string name="username_characters">Username can only contain letters a-z/A-Z and numbers 0-9.</string>
    <string name="username_start">Username needs to start with at least 3 letters.</string>
    <string name="username_end">Username can only have numbers at the end.</string>
    <string name="password_long">Password cannot be longer than 30 characters.</string>
    <string name="password_short">Password cannot be shorter than 5 characters.</string>
    <string name="password_characters">Password can only contain letters a-z/A-Z and numbers 0-9.</string>
    <string name="email_taken">E-mail address already exists.</string>
    <string name="email_invalid">E-mail address is invalid.</string>
    <!-- Camera -->
    <string name="hold_phone_vertical">Please, hold phone vertically</string>
    <!-- Share -->
    <string name="share_public">Share with public</string>
    <string name="share_panorama">Share panorama</string>
    <!-- Notifications -->
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="count">Count</string>
    <string name="temp_location">Silver parks lake, WY</string>
    <string name="temp_date">2017&#8211;02&#8211;08</string>
    <string name="change_map_view_on_profile_from_list">Change to view profile as a map instead of list</string>
    <string name="profile_options_three_dot_button_text">Open a options menu for additional profile options</string>
    <string name="profile_image">The profile image of the user</string>
    <!-- Profile popup menu -->
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="upload_profile_picture">Change profile picture</string>
    <!-- Friends -->
    <string name="friend_requests">Friend requests</string>
</resources>
